--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Web</title>
+    <meta property="og:image" content="https://i.pinimg.com/originals/d4/e1/f9/d4e1f9cc59a71c42f38daf63cbcf361d.png" />
+    <title>Sangi</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
